--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
 	},
 	"workspaces": {
 		"packages": [
-			"packages/*",
-			"actions/*"
+			"packages/*"
 		]
 	},
 	"dependencies": {
-		"@actions/core": "^1.2.6"
+		"@actions/core": "^1.2.6",
+		"@actions/exec": "^1.0.4",
+		"@actions/github": "^4.0.0",
+		"@actions/io": "^1.0.2"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^4.3.0",
-		"@typescript-eslint/parser": "^3.10.1",
-		"@vercel/ncc": "^0.23.0",
-		"eslint": "^7.10.0",
-		"eslint-config-prettier": "^6.12.0",
+		"@typescript-eslint/eslint-plugin": "^4.6.0",
+		"@typescript-eslint/parser": "^4.6.0",
+		"@vercel/ncc": "^0.24.1",
+		"eslint": "^7.12.1",
+		"eslint-config-prettier": "^6.15.0",
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-github": "^4.1.1",
 		"prettier": "^2.1.2",
-		"typescript": "^4.0.3"
+		"typescript": "^4.0.5"
 	}
 }
