--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -13,6 +13,8 @@ jobs:
 
             - uses: actions/checkout@v2
               name: Checkout the commit
+              with:
+                  token: ${{ secrets.API_TOKEN_GITHUB }}
 
             - uses: dcodeIO/setup-node-nvm@master
               with:
@@ -36,6 +38,7 @@ jobs:
             # Commit the built assets back to the branch
             - uses: stefanzweifel/git-auto-commit-action@v4
               with:
+                  push_options: --force # required for protected branches
                   commit_message: Build JS
                   commit_user_name: ${{ secrets.GIT_USER_NAME }}
                   commit_user_email: ${{ secrets.GIT_USER_EMAIL }}
