--- a/packages/makepot/action.yml
+++ b/packages/makepot/action.yml
@@ -1,6 +1,6 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Generate POT file for WP plugins/themes'
+description: 'With this action, you can generate POT File for your WordPress plugin/theme.'
+author: 'eventespresso'
 inputs:
     save-path:
         required: true
