--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,9 @@
 	"parser": "@typescript-eslint/parser",
 	"plugins": ["@typescript-eslint"],
 	"extends": [
-		"eslint:recommended",
+		"plugin:jest/recommended",
 		"plugin:@typescript-eslint/recommended",
+		"eslint:recommended",
 		"plugin:prettier/recommended",
 		"plugin:github/recommended"
 	],
