--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 	"license": "GPL-3.0",
 	"private": true,
 	"scripts": {
-		"run:all": "yarn workspaces run all"
+		"run:all": "yarn workspaces run all",
+		"test": "jest --watchAll",
+		"test:ci": "jest"
 	},
 	"workspaces": {
 		"packages": [
@@ -20,13 +22,18 @@
 		"@actions/io": "^1.0.2"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^4.6.0",
-		"@typescript-eslint/parser": "^4.6.0",
-		"@vercel/ncc": "^0.24.1",
-		"eslint": "^7.12.1",
+		"@types/jest": "^26.0.15",
+		"@typescript-eslint/eslint-plugin": "^4.7.0",
+		"@typescript-eslint/parser": "^4.7.0",
+		"@vercel/ncc": "^0.25.1",
+		"eslint": "^7.13.0",
 		"eslint-config-prettier": "^6.15.0",
+		"eslint-plugin-jest": "^24.1.3",
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-github": "^4.1.1",
+		"jest": "^26.6.3",
+		"jest-circus": "^26.6.3",
+		"ts-jest": "^26.4.4",
 		"prettier": "^2.1.2",
 		"typescript": "^4.0.5"
 	}
