--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
 		"strict": false,
 		"target": "es6"
 	},
-	"include": ["packages", "actions"],
-	"exclude": ["node_modules"]
+	"include": ["packages"],
+	"exclude": ["node_modules", "packages/**/tests/*"]
 }
