--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
 		"@actions/core": "^1.2.6",
 		"@actions/exec": "^1.0.4",
 		"@actions/github": "^4.0.0",
-		"@actions/io": "^1.0.2"
+		"@actions/io": "^1.0.2",
+		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
 		"@types/jest": "^26.0.15",
+		"@types/ramda": "^0.27.30",
 		"@typescript-eslint/eslint-plugin": "^4.7.0",
 		"@typescript-eslint/parser": "^4.7.0",
 		"@vercel/ncc": "^0.25.1",
