Simplify version bump to use SRP

--- a/packages/version-bump/action.yml
+++ b/packages/version-bump/action.yml
@@ -4,7 +4,9 @@ author: 'eventespresso'
 inputs:
     type:
         required: true
-        description: 'The version bump type i.e. `pre_release` | `micro_zip` | `decaf` | `rc` | `alpha` | `beta` | `minor` | `major`'
+        description: 'The version bump type i.e. `major` | `minor` | `patch` | `set_release_type` | `build`'
+    value:
+        description: 'The value to use for bumping. Usually used to set release type or reset build.'
     main-file:
         required: true
         description: 'Path of the plugin main file'
@@ -14,8 +16,6 @@ inputs:
     info-json-file:
         required: true
         description: 'Path of the info.json file.'
-    release-types:
-        description: 'JSON serialized string of release type names. For example {"pre_release":"beta","decaf":"decaf","rc":"rc","release":"p"}'
 runs:
     using: 'node12'
     main: 'dist/index.js'
