Add explicit release-type input

--- a/packages/version-bump/action.yml
+++ b/packages/version-bump/action.yml
@@ -7,6 +7,8 @@ inputs:
         description: 'The version bump type i.e. `major` | `minor` | `patch` | `release_type` | `build`'
     value:
         description: 'The value to use for bumping. Usually used to set release type or reset build.'
+    release-type:
+        description: 'Explicit value for setting the release type while bumping the version.'
     main-file:
         required: true
         description: 'Path of the plugin main file'
