--- a/packages/install-wp-tests/Dockerfile
+++ b/packages/install-wp-tests/Dockerfile
@@ -1,5 +1,10 @@
 FROM debian:stable-slim
 
+RUN apt-get update \
+	&& apt-get install -y curl \
+	&& apt-get clean -y \
+	&& rm -rf /var/lib/apt/lists/*
+
 COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
