--- a/packages/checkout-and-yarn/action.yml
+++ b/packages/checkout-and-yarn/action.yml
@@ -28,6 +28,7 @@ runs:
 
         - name: Install dependencies
           # install deps only if lockfile has changed
-          #   TODO enable if when composite actions support it
+          #   TODO enable 'if' when composite actions support it
           #   if: steps.cache-deps.outputs.cache-hit != 'true'
           run: yarn install --frozen-lockfile
+          shell: bash
