Add token input support

--- a/packages/checkout-and-yarn/action.yml
+++ b/packages/checkout-and-yarn/action.yml
@@ -6,6 +6,9 @@ inputs:
         required: false
         description: 'Number of commits to fetch during checkout. 0 indicates all history for all branches and tags.'
         default: '1'
+    token:
+        required: false
+        description: 'Personal access token (PAT) used to fetch the repository.'
 runs:
     using: 'composite'
     steps:
@@ -13,6 +16,7 @@ runs:
           uses: actions/checkout@v2
           with:
               fetch-depth: ${{ inputs.fetch-depth }}
+              token: ${{ inputs.token }}
 
         - name: Set up Node
           uses: actions/setup-node@v2
