Use the absolute path

--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout and yarn
-              uses: ./packages/checkout-and-yarn
+              uses: eventespresso/actions/packages/checkout-and-yarn@checkout-and-yarn-action
               with:
                   token: ${{ secrets.GH_ACTIONS_ACCESS_TOKEN }}
 
