--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -9,8 +9,10 @@ jobs:
         if: "!contains(github.event.head_commit.message, 'gh-actions')"
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v2
+
             - name: Checkout and yarn
-              uses: eventespresso/actions/packages/checkout-and-yarn@checkout-and-yarn-action
+              uses: ./packages/checkout-and-yarn
               with:
                   token: ${{ secrets.GH_ACTIONS_ACCESS_TOKEN }}
 
