--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -6,8 +6,10 @@ jobs:
     build:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v2
+
             - name: Checkout and yarn
-              uses: eventespresso/actions/packages/checkout-and-yarn@checkout-and-yarn-action
+              uses: ./packages/checkout-and-yarn
 
             - name: Run all scripts
               run: yarn run:all
