--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@actions/exec": "^1.0.4",
 		"@actions/github": "^4.0.0",
 		"@actions/io": "^1.0.2",
+		"@octokit/graphql": "^4.8.0",
 		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
@@ -30,13 +31,13 @@
 		"@vercel/ncc": "^0.25.1",
 		"eslint": "^7.13.0",
 		"eslint-config-prettier": "^6.15.0",
+		"eslint-plugin-github": "^4.1.1",
 		"eslint-plugin-jest": "^24.1.3",
 		"eslint-plugin-prettier": "^3.1.4",
-		"eslint-plugin-github": "^4.1.1",
 		"jest": "^26.6.3",
 		"jest-circus": "^26.6.3",
-		"ts-jest": "^26.4.4",
 		"prettier": "^2.1.2",
+		"ts-jest": "^26.4.4",
 		"typescript": "^4.0.5"
 	}
 }
