--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@actions/github": "^4.0.0",
 		"@actions/io": "^1.0.2",
 		"@octokit/graphql": "^4.8.0",
+		"dotenv": "^10.0.0",
 		"ramda": "^0.27.1"
 	},
 	"devDependencies": {
