--- a/packages/auto-pr-labeler/action.yml
+++ b/packages/auto-pr-labeler/action.yml
@@ -1,15 +1,15 @@
 name: 'Auto PR Labeler'
 description: 'Action for adding and/or removing labels on Pull Requests'
 inputs:
-    owner:
-      description: 'Organization Name / Repo Owner'
-      required: true
-    prNumber:
-      description: 'Pull Request Number'
-      required: true
-    repo:
-      description: 'Repository Name'
-      required: true
+    # owner:
+    #   description: 'Organization Name / Repo Owner'
+    #   required: true
+    # prNumber:
+    #   description: 'Pull Request Number'
+    #   required: true
+    # repo:
+    #   description: 'Repository Name'
+    #   required: true
     token:
         required: false
         description: 'Personal access token (PAT) used to fetch the repository.'
