oops... unescaped quote in string :facepalm:

--- a/packages/checkout-and-yarn/action.yml
+++ b/packages/checkout-and-yarn/action.yml
@@ -4,7 +4,7 @@ author: 'eventespresso'
 inputs:
     cache-version:
         required: false
-        description: 'used for refreshing the cache, value doesn't matter as long as it changes when you need a refresh'
+        description: 'used for refreshing the cache by simply changing value to something new'
         default: '1'
     fetch-depth:
         required: false
