--- a/packages/checkout-and-LAMP/action.yml
+++ b/packages/checkout-and-LAMP/action.yml
@@ -7,12 +7,12 @@ inputs:
         description: 'The PHP version to set up.'
     composer-dependencies:
         required: false
-        description: 'Composer dependency version strategy to use. Options: locked, lowest (default), highest.'
-        default: 'lowest'
+        description: 'Composer dependency version strategy to use. Options: locked, lowest, highest (default).'
+        default: 'highest'
     composer-options:
         required: false
-        description: 'Composer command options. Default: "--optimize-autoloader".'
-        default: '--optimize-autoloader'
+        description: 'Composer command options. Default: "--optimize-autoloader --prefer-dist".'
+        default: '--optimize-autoloader --prefer-dist'
     php-tools:
         required: false
         description: 'Tools to set up for PHP.'
