--- a/packages/checkout-and-LAMP/action.yml
+++ b/packages/checkout-and-LAMP/action.yml
@@ -52,3 +52,4 @@ runs:
           with:
               composer-options: ${{ inputs.composer-options }}
               dependency-versions: ${{ inputs.composer-dependencies }}
+              custom-cache-key: ${{ secrets.GH_ACTIONS_CACHE_VERSION }}
