--- a/packages/auto-pr-labeler/package.json
+++ b/packages/auto-pr-labeler/package.json
@@ -2,7 +2,7 @@
 	"name": "@eventespresso-actions/auto-pr-labeler",
 	"version": "0.0.1",
 	"private": true,
-	"main": "lib/index.js",
+	"main": "src/index.js",
 	"scripts": {
 		"build": "tsc",
 		"format": "prettier --write **/*.ts",
