--- a/packages/checkout-and-LAMP/action.yml
+++ b/packages/checkout-and-LAMP/action.yml
@@ -29,6 +29,10 @@ inputs:
         required: false
         description: 'Number of commits to fetch during checkout. 0 indicates all history for all branches and tags.'
         default: '1'
+    checkout-ref:
+        required: false
+        description: 'The branch, tag or SHA to checkout. Default: "master".'
+        default: 'master'
     php-version:
         required: true
         description: 'The PHP version to set up.'
@@ -47,6 +51,7 @@ runs:
           uses: actions/checkout@v2
           with:
               fetch-depth: ${{ inputs.fetch-depth }}
+              ref: my-branch
               token: ${{ inputs.token }}
 
         - name: Set Timestamp
