--- a/packages/checkout-and-LAMP/action.yml
+++ b/packages/checkout-and-LAMP/action.yml
@@ -13,6 +13,10 @@ inputs:
         required: false
         description: 'key used for setting and reading cache.'
         default: ${{ github.cache-key }}
+    checkout-ref:
+        required: false
+        description: 'The branch, tag or SHA to checkout. Default: "master".'
+        default: 'master'
     composer-dependencies:
         required: false
         description: 'Composer dependency version strategy to use. Options: locked (default), lowest, highest.'
@@ -29,10 +33,6 @@ inputs:
         required: false
         description: 'Number of commits to fetch during checkout. 0 indicates all history for all branches and tags.'
         default: '1'
-    checkout-ref:
-        required: false
-        description: 'The branch, tag or SHA to checkout. Default: "master".'
-        default: 'master'
     php-version:
         required: true
         description: 'The PHP version to set up.'
@@ -51,7 +51,7 @@ runs:
           uses: actions/checkout@v2
           with:
               fetch-depth: ${{ inputs.fetch-depth }}
-              ref: my-branch
+              ref: ${{ inputs.checkout-ref }}
               token: ${{ inputs.token }}
 
         - name: Set Timestamp
