--- a/packages/multi-changelog/package.json
+++ b/packages/multi-changelog/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Event Espresso",
 	"license": "GPL-3.0",
-	"main": "src/index.ts",
+	"main": "lib/index.js",
 	"name": "@eventespresso-actions/multi-changelog",
 	"private": true,
 	"version": "0.0.1",
