--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+dist/
+packages/*/dist/
 
 # TypeScript v1 declaration files
 typings/
