standardize and ABCD package files

--- a/packages/remove-files/package.json
+++ b/packages/remove-files/package.json
@@ -1,8 +1,10 @@
 {
-	"name": "@eventespresso-actions/remove-files",
-	"version": "0.0.1",
-	"private": true,
+	"author": "Event Espresso",
+	"license": "GPL-3.0",
 	"main": "lib/index.js",
+	"name": "@eventespresso-actions/remove-files",
+	"private": true,
+	"version": "0.0.1",
 	"scripts": {
 		"build": "tsc",
 		"format": "prettier --write **/*.ts",
@@ -10,7 +12,5 @@
 		"lint": "eslint src/**/*.ts",
 		"package": "ncc build --source-map --license licenses.txt",
 		"all": "npm run build && npm run format && npm run lint && npm run package"
-	},
-	"author": "Event Espresso",
-	"license": "GPL-3.0"
+	}
 }
