--- a/packages/io/package.json
+++ b/packages/io/package.json
@@ -1,7 +1,7 @@
 {
 	"author": "Event Espresso",
 	"license": "GPL-3.0",
-	"main": "src/index.ts",
+	"main": "lib/index.js",
 	"name": "@eventespresso-actions/io",
 	"private": true,
 	"version": "1.0.1",
@@ -10,6 +10,7 @@
 		"format": "prettier --write **/*.ts",
 		"format-check": "prettier --check **/*.ts",
 		"lint": "eslint src/**/*.ts",
-		"all": "npm run build && npm run format && npm run lint"
+		"package": "ncc build --source-map --license licenses.txt",
+		"all": "npm run build && npm run format && npm run lint && npm run package"
 	}
 }
