--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
 		"target": "es6"
 	},
 	"include": ["packages"],
-	"exclude": ["node_modules", "packages/**/tests/*"]
+	"exclude": ["node_modules", "packages/**/lib", "packages/**/tests/*"]
 }
