--- a/packages/multi-changelog/package.json
+++ b/packages/multi-changelog/package.json
@@ -12,5 +12,8 @@
 		"lint": "eslint src/**/*.ts",
 		"package": "ncc build --source-map --license licenses.txt",
 		"all": "npm run build && npm run format && npm run lint && npm run package"
+	},
+	"dependencies": {
+		"@eventespresso-actions/io": "^1.0.0"
 	}
 }
