--- a/packages/version-bump/package.json
+++ b/packages/version-bump/package.json
@@ -13,5 +13,8 @@
 		"package": "ncc build --source-map --license licenses.txt",
 		"all": "npm run build && npm run format && npm run lint && npm run package",
 		"test": "jest --watchAll"
+	},
+	"dependencies": {
+		"@eventespresso-actions/io": "^1.0.0"
 	}
 }
