Stop VSCode from organizing imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
 		"**/node_modules": true,
 		"**/dist": true,
 		"**/lib": true
+	},
+	"editor.codeActionsOnSave": {
+		"source.organizeImports": false
 	}
 }
