--- a/packages/e2e-tests/action.yml
+++ b/packages/e2e-tests/action.yml
@@ -1,14 +1,21 @@
 name: E2E Tests
 description: Action for running E2E tests
 inputs:
-    cafe-repo:
-        description: Path to Cafe git repository
+    cafe-repo-branch:
+        description: Which branch to use for Cafe repository?
+        type: string
         required: true
-    barista-repo:
-        description: Path to Barista git repository
+    use-barista-repo:
+        description: Should Barista repo be cloned?
+        type: boolean
         required: true
-    e2e-tests-repo:
-        description: Path to E2E Tests git repository
+    barista-repo-branch:
+        description: Which branch to use for Barista repository?
+        type: string
+        required: false
+    e2e-tests-repo-branch:
+        description: Which branch to use for E2E Tests repository?
+        type: string
         required: true
 runs:
     using: 'node16'
